<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:background="@color/bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:minHeight="@dimen/min_item_height">
        <LinearLayout
            android:id="@+id/header_container"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/style_headerContainer">
            <ImageButton
                android:id="@+id/btn_back"
                android:contentDescription="@string/btn_back"
                android:scaleType="fitXY"
                android:background="@color/bg_color"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:src="@drawable/back" />
            <TextView
                android:id="@+id/header"
                android:text="@string/title_autonomous"
                style="@style/style_header" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:baselineAligned="false"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="@dimen/min_item_height"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center"
                android:layout_weight="1"
                android:minHeight="@dimen/min_item_height"
                android:orientation="horizontal" >
            <ImageButton
                android:id="@+id/btn_help"
                android:contentDescription="@string/title_control"
                android:scaleType="fitCenter"
                android:background="@android:color/holo_red_light"
                android:layout_height="300dp"
                android:padding="15dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:src="@drawable/alert" />
                <ImageButton
                    android:id="@+id/btn_stop"
                    android:contentDescription="@string/title_control"
                    android:scaleType="fitCenter"
                    android:background="@color/btn_color5"
                    android:layout_height="300dp"
                    android:padding="15dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:src="@drawable/stop" />
                </LinearLayout>

            <TextView
                android:id="@+id/listen"
                android:layout_weight="2"
                android:text="@string/view_listen"
                style="@style/style_textView" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>