<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:background="@color/bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">
    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:minHeight="@dimen/min_item_height">
        <LinearLayout
            android:id="@+id/header_container"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/style_headerContainer">
            <ImageButton
                android:id="@+id/btn_back"
                android:contentDescription="@string/btn_back"
                android:scaleType="fitXY"
                android:background="@color/bg_color"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:src="@drawable/back" />
            <TextView
                android:id="@+id/header"
                android:text="@string/title_alarm"
                style="@style/style_header" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:baselineAligned="false"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="@dimen/min_item_height"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/deedeealertsetting"
                android:layout_height="150dp"
                android:padding="15dp"
                android:layout_width="150dp"
                android:src="@drawable/deedeeangryalertsetting"
                android:contentDescription="@string/facealert"
                android:layout_alignParentTop="true" />
            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/deedeealertsetting"
                android:layout_toEndOf="@+id/deedeealertsetting"
                android:layout_above="@+id/soundsetting">
                <Switch
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/faceswitch"
                    android:layout_gravity="center" />
                </FrameLayout>

            <ImageView
                android:id="@+id/soundsetting"
                android:layout_height="150dp"
                android:padding="30dp"
                android:layout_width="wrap_content"
                android:src="@drawable/soundsetting"
                android:layout_below="@+id/deedeealertsetting"
                android:contentDescription="@string/soundalert"
                android:layout_alignStart="@+id/deedeealertsetting"
                android:layout_alignEnd="@+id/deedeealertsetting" />
            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"

                android:layout_toEndOf="@+id/soundsetting"
                android:layout_below="@+id/deedeealertsetting"
                android:layout_above="@+id/swordsetting">
                <Switch
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/soundswitch"
                    android:layout_gravity="center" />
            </FrameLayout>
            <ImageView
                android:id="@+id/swordsetting"
                android:layout_height="150dp"
                android:contentDescription="@string/swordalert"
                android:padding="40dp"
                android:layout_width="wrap_content"
                android:src="@drawable/swordsetting"
                android:layout_below="@+id/soundsetting"
                android:layout_alignStart="@+id/soundsetting"
                android:layout_alignEnd="@+id/soundsetting" />
            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/soundsetting"
                android:layout_toEndOf="@+id/swordsetting"
                android:layout_alignBottom="@+id/swordsetting">
                <Switch
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/attackswitch"
                    android:layout_gravity="center" />
            </FrameLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>